// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTrip /> should render component 1`] = `
<div
  className="rl_container article"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="author"
        onChange={[Function]}
        placeholder="Enter author"
        type="text"
        value=""
      />
    </div>
    <textarea
      name="review"
      onChange={[Function]}
      value=""
    />
    <div
      className="form_element"
    >
      <input
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        onChange={[Function]}
        rating={0}
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="price"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with postDeleted 1`] = `
<div
  className="rl_container article"
>
  <div
    className="red_tag"
  >
    Post Deleted
  </div>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="author"
        onChange={[Function]}
        placeholder="Enter author"
        type="text"
        value=""
      />
    </div>
    <textarea
      name="review"
      onChange={[Function]}
      value=""
    />
    <div
      className="form_element"
    >
      <input
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        onChange={[Function]}
        rating={0}
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="price"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with updateTrip 1`] = `
<div
  className="rl_container article"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="author"
        onChange={[Function]}
        placeholder="Enter author"
        type="text"
        value=""
      />
    </div>
    <textarea
      name="review"
      onChange={[Function]}
      value=""
    />
    <div
      className="form_element"
    >
      <input
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        onChange={[Function]}
        rating={0}
      />
    </div>
    <div
      className="form_element"
    >
      <input
        name="price"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;
